// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage renders correctly when \`showHeader\` is false 1`] = `
<CustomMessage
  color="none"
  content="some text"
  header={null}
  type="error"
/>
`;

exports[`ErrorMessage renders correctly when \`showHeader\` is true 1`] = `
<CustomMessage
  color="none"
  content="some text"
  header="Something went wrong"
  type="error"
/>
`;
